# influxdb2

./: Cargo.toml
examples/: multifield.rs  precision.rs  write_with_builder.rs
influxdb2-derive/: Cargo.toml
influxdb2-derive/src/: expand_tuple.rs  expand_writable.rs  lib.rs
influxdb2-structmap/: Cargo.toml
influxdb2-structmap/src/: value.rs
src/: lib.rs  writable.rs
src/api/: buckets.rs  delete.rs  label.rs  organization.rs  query.rs  task.rs  write.rs
src/models/: data_point.rs
src/models/ast/: dialect.rs
