[package]
name = "influxdb2"
version = "0.3.7"
authors = ["Armin Primadi <aprimadi@gmail.com>", "Paul Dix <paul@pauldix.net>"]
keywords = ["influxdb", "influxdb2", "influxdb-client"]
description = "Influxdb 2 client library for rust"
homepage = "https://github.com/aprimadi/influxdb2"
repository = "https://github.com/aprimadi/influxdb2"
license = "MIT"
edition = "2018"


[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies] # In alphabetical order
influxdb2-structmap = { version = "0.2.0", path = "./influxdb2-structmap" }
influxdb2-derive = { version = "0.1.1", path = "./influxdb2-derive" }

# crates.io dependencies
base64 = "0.21"
bytes = { version = "1.4", default-features = false }
chrono = { version = "0.4.23", features = ["serde"] }
csv = "1.2"
dotenv = "0.15.0"
fallible-iterator = "0.2.0"
futures = { version = "0.3.26", default-features = false }
go-parse-duration = "0.1.1"
nom = "7.1.3"
opentelemetry = { version = "0.18", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
ordered-float = "3.4"
parking_lot = "0.12.1"
reqwest = { version = "0.11.14", features = ["stream", "json"], default-features = false}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_qs = "0.12"
smallvec = "1.2.0"
snafu = "0.6.6"
tempfile = "3.4.0"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "smallvec", "chrono", "parking_lot", "registry", "fmt", "ansi", "json"] }
url = "2.3.1"

[dev-dependencies] # In alphabetical order
mockito = "0.26"
num-traits = "0.2.15"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
parking_lot = "0.12.1"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
test_helpers = { path = "./test_helpers" }
