[package]
name = "influxdb2-derive"
description = "Proc derive macro for Influxdb"
authors = ["Armin Primadi <aprimadi@gmail.com>", "ex0dus-0x <ex0dus@codemuch.tech>"]
license = "MIT"
version = "0.1.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1.0.24"
quote = "1.0"
regex = { version = "1.5.5" }
syn = { version = "1.0.109", features = ["full", "extra-traits"] }

[dev-dependencies]
influxdb2-structmap = { path = "../influxdb2-structmap" }
influxdb2 = {path="../"}
# crates.io dependencies
chrono = "0.4.23"
num-traits = "0.2.15"
trybuild = "1.0"
